Includes some dlls for UWP

--- a/Client/Restaurant.Client/Restaurant.Web/index.html
+++ b/Client/Restaurant.Client/Restaurant.Web/index.html
@@ -5,6 +5,15 @@
 	<meta charset="utf-8" />
 </head>
 <body>
-
+	<div>
+		<ul>
+			<li>
+				<a href="/Home"></a>
+				<a href="/About"></a>
+				<a href="/Contact"></a>
+				<a href="/Help"></a>
+			</li>
+		</ul>
+	</div>
 </body>
 </html>
