crud operations for all tables
Former-commit-id: de06761bb98c0cf29e616f2bb7e742f311714d76

--- a/Web-Client/restaurant-manager/src/index.html
+++ b/Web-Client/restaurant-manager/src/index.html
@@ -13,7 +13,9 @@
 </head>
 
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div class="ui container basic segment loading" style="margin: auto;  position: absolute;  top: 0; left: 0; bottom: 0; right: 0"></div>
+  </app-root>
 </body>
 
 </html>
