--- a/Dashboard-Admin/src/index.html
+++ b/Dashboard-Admin/src/index.html
@@ -10,16 +10,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous"></script>
-  <style>
-    .vertical-center {
-      margin: auto;  position: absolute;  top: 0; left: 0; bottom: 0; right: 0
-    }
-  </style>
 </head>
 
 <body>
   <app-root>
-    <div class="ui container basic segment loading" class="vertical-center"></div>
+    <div class="ui container basic segment loading" style="margin: auto;  position: absolute;  top: 0; left: 0; bottom: 0; right: 0"></div>
   </app-root>
 </body>
 
