--- a/Dashboard-Admin/src/index.html
+++ b/Dashboard-Admin/src/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <app-root>
+  <app-root class="pushable" id="example">
     <div class="ui container basic segment loading" style="margin: auto;  position: absolute;  top: 0; left: 0; bottom: 0; right: 0"></div>
   </app-root>
 </body>
