dashboard app changes
Former-commit-id: 990b052614a33d10bce643818ab66525f243cc04
Former-commit-id: ae9950db7532a14a46b45e45fbdf7bda6aa26d1c [formerly 1eaea355803f8ad20475fcdd2c8b69062d5b66da]
Former-commit-id: b2a42cac9b38c7097f7b0875f8156b4551dd09d0

--- a/src/Server/web/web.admin/dashboard/src/index.html
+++ b/src/Server/web/web.admin/dashboard/src/index.html
@@ -14,5 +14,8 @@
 
 <body>
   <app-root></app-root>
+  <script>
+    parent.postMessage(location.hash, location.origin);
+  </script>
 </body>
 </html>
